@@ -1,0 +1,72 @@
+##########################################################################
+#  
+#  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+#  
+#  Redistribution and use in source and binary forms, with or without
+#  modification, are permitted provided that the following conditions are
+#  met:
+#  
+#      * Redistributions of source code must retain the above
+#        copyright notice, this list of conditions and the following
+#        disclaimer.
+#  
+#      * Redistributions in binary form must reproduce the above
+#        copyright notice, this list of conditions and the following
+#        disclaimer in the documentation and/or other materials provided with
+#        the distribution.
+#  
+#      * Neither the name of John Haddon nor the names of
+#        any other contributors to this software may be used to endorse or
+#        promote products derived from this software without specific prior
+#        written permission.
+#  
+#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+#  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+#  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+#  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+#  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+#  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+#  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+#  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#  
+##########################################################################
+
+from __future__ import with_statement
+
+import Gaffer
+import GafferUI
+
+class VectorDataPlugValueWidget( GafferUI.PlugValueWidget ) :
+
+	def __init__( self, plug ) :
+		
+		self.__dataWidget = GafferUI.VectorDataWidget()
+			
+		GafferUI.PlugValueWidget.__init__( self, self.__dataWidget, plug )
+		
+		self.__dataChangedConnection = self.__dataWidget.dataChangedSignal().connect( Gaffer.WeakMethod( self.__dataChanged ) )
+		
+		self.updateFromPlug()
+		
+	def updateFromPlug( self ) :
+				
+		if self.getPlug() is not None :
+			self.__dataWidget.setData( self.getPlug().getValue() )
+					
+		self.__dataWidget.setEditable( self._editable() )
+			
+	def __dataChanged( self, widget ) :
+		
+		assert( widget is self.__dataWidget )
+					
+		with Gaffer.UndoContext( self.getPlug().ancestor( Gaffer.ScriptNode.staticTypeId() ) ) :
+						
+			self.getPlug().setValue( self.__dataWidget.getData() )
+	
+GafferUI.PlugValueWidget.registerType( Gaffer.IntVectorDataPlug.staticTypeId(), VectorDataPlugValueWidget )
+GafferUI.PlugValueWidget.registerType( Gaffer.FloatVectorDataPlug.staticTypeId(), VectorDataPlugValueWidget )
+GafferUI.PlugValueWidget.registerType( Gaffer.StringVectorDataPlug.staticTypeId(), VectorDataPlugValueWidget )
+GafferUI.PlugValueWidget.registerType( Gaffer.V3fVectorDataPlug.staticTypeId(), VectorDataPlugValueWidget )
